# project

./: .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  brain.py  main.py  popup.py  pyproject.toml  requirements.txt  screenpipe_client.py
scripts/: build_macos_app.sh  build_vendored_screenpipe.sh  install_bundled_screenpipe.sh  update_vendored_screenpipe.sh
time_thief_hunter/: __init__.py  __main__.py  brain.py  config.py  decision_engine.py  event_bus.py  llm_provider.py  main.py  memory.py  models.py  orchestrator.py  popup.py  screenpipe_client.py  settings.py  singleton.py  startup.py  vendor_screenpipe.py
time_thief_hunter/agents/: __init__.py  action.py  base.py  classification.py  enforcement.py  negotiation.py  perception.py  planner.py  policy.py  task_context.py
time_thief_hunter/prompts/: classifier.md  negotiator.md  planner.md  policy.md
time_thief_hunter/runtime/: __init__.py  agent_registry.py  executor.py  messages.py  prompt_loader.py  state_machine.py  traces.py
time_thief_hunter/tools/: __init__.py  desktop_control_tool.py  git_tool.py  ide_tool.py  memory_tool.py  popup_tool.py  screenpipe_tool.py  screenshot_tool.py
time_thief_hunter/ui/: index.html
time_thief_hunter/workflows/: __init__.py  intervention_graph.py
